correction alignement image titre page layout

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -96,7 +96,7 @@ hr {
 }
 
 .image-titre {
-	margin: 0% 2% 2% 2%;
+	margin: 0% 2% 2% 0%;
 }
 
 .image-caddie-panier {
